# agent

./: .gitignore  .pre-commit-config.yaml  README.md  chainlit.md  deferrable_react_agent.py  demo_for_issue.py  justfile  main.py  my_react_chat_formatter.py  pyproject.toml  sub_question_generating_prompt_in_keywords.py  system_prompt.md  system_prompt_for_condition_evaluator.md  tool_for_backburner.py  tool_for_my_notes.py  tool_for_wikipedia.py
.chainlit/: config.toml
.chainlit/translations/: en-US.json  pt-BR.json
demo-notes/: Drinks I like.md  How I brew my coffee.md
