[project]
name = "agent"
version = "0.1.0"
description = "A chatbot capable of deferring tasks till when the time is right."
readme = "README.md"

# Arize Phonenix requires numba, which requires python<3.13.
requires-python = ">=3.12,<3.13"

dependencies = [
    "chainlit>=1.3.0rc0",
    "arize-phoenix>=5.2.2",
    "arize-phoenix-otel>=0.4.1",
    "llama-index>=0.11.17",
    "torch>=2.5.1",
    "openinference-instrumentation-llama-index>=3.0.4",
    "llama-index-callbacks-arize-phoenix>=0.2.1",
    "opentelemetry-proto>=1.28.1",
    "llama-index-vector-stores-chroma>=0.3.0",
    "llama-index-embeddings-ollama>=0.3.1",
    "llama-index-readers-wikipedia>=0.2.0",
    "wikipedia>=1.4.0",
    "chromadb>=0.5.18",
    "llama-hub>=0.0.79.post1",
    "rich>=13.9.4",
    "llama-index-llms-openai-like>=0.2.0",
    "llama-index-core>=0.11.23",
]
